avoid using transform of UEs as this will break z-index

--- a/src/bs/bs.css
+++ b/src/bs/bs.css
@@ -35,9 +35,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: lightgray;
     border-radius: 50%;
-    transition: transform 0.3s ease;
+    /* transition: transform 0.3s ease; */
+    transition: top 0.5s ease, left 0.5s ease;
 }
 
 
